--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "vksescminiapp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "homepage": "https://skkstudio.github.io/vksescminiapp/",
+  "main": "index.js",
   "scripts": {
-    "start": "cross-env PORT=10888 react-scripts start",
-    "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "start": "cross-env PORT=10888 react-scripts start",
+    "build": "react-scripts build"
   },
   "keywords": [],
   "author": "",
